--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,20 +1,23 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="error-template">
-        <h1><%= t(".Oops")%></h1>
-        <h2><%= t ".404 Not Found"%></h2>
-        <div class="error-details">
-          <%= t ".err_not_found" %>
-        </div>
-        <div class="error-actions">
-          <a href="http://www.jquery2dotnet.com" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
-          <%= t ".Take Me Home "%></a>
-          <a href="http://www.jquery2dotnet.com" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span>
-            <%= t ".Contact Support" %>
-          </a>
-        </div>
+    <div class="row">
+      <div class="col-md-12">
+          <div class="error-template">
+              <h1><%= t(".oops") %></h1>
+              <h2><%= t(".404 Not Found")%></h2>
+              <div class="error-details">
+                  <%= t(".error_request")%>
+              </div>
+              <div class="error-actions">
+                <a href="http://www.jquery2dotnet.com" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
+                    <%= t(".take_me_home ")%>
+                </a>
+                <a href="http://www.jquery2dotnet.com" class="btn btn-default btn-lg">
+                  <span class="glyphicon glyphicon-envelope"></span>
+                  <%= t(".Contact Support")%>
+                </a>
+              </div>
+          </div>
       </div>
-    </div>
   </div>
 </div>
+
