--- a/app/views/static_pages/404.html.erb
+++ b/app/views/static_pages/404.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      <%= t(".404-page")%>
+      <%= t ".404-page"%>
     </title>
   </head>
   <body>
@@ -42,22 +42,22 @@
             <ul>
               <li class="#">
                 <a href="index.html">
-                  <%= t(".home")%>
+                  <%= t ".home"%>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <%= t(".product") %>
+                  <%= t ".product" %>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <%= t(".sale") %>
+                  <%= t".sale" %>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <%= t(".contact") %>
+                  <%= t ".contact" %>
                 </a>
               </li>
             </ul>
@@ -66,7 +66,7 @@
         </div>
 
         <div class="page-not-found">
-          <h1><%= t(".404")%></h1>
+          <h1><%= t ".404"%></h1>
         </div>
       </div>
     </div>
