--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    <%= t(".title-web") %>
+    <%= t ".title-web" %>
   </title>
   <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
