--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,5 +8,5 @@
   <%= f.password_field :password, class: "form-control" %>
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation, class: "form-control" %>
-  <%= f.submit t(".create_my_account"), class: "btn btn-primary" %>
+  <%= f.submit t ".create_my_account", class: "btn btn-primary" %>
 <% end %>
