--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,281 +1,52 @@
-<!DOCTYPE HTML>
-<html>
-
-<head>
-  <title>
-    <%= t "static_pages.home.title_web" %>
-  </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-</head>
-
-<body>
-  <div class="header-bg">
-    <div class="wrap">
-      <div class="h-bg">
-        <div class="total">
-          <div class="header">
-            <div class="header-right">
-              <ul class="follow_icon">
-                <li>
-                  <a href="#">
-                    <%= image_tag( "image/co-nb.png", :alt=> t(".title image" ))%></a>
-                </li>
-                <li>
-                  <a href="#">
-                    <%= image_tag( "image/lo-pn.png",  :alt=> t(".title image") %></a>
-                </li>
-              </ul>
+<div class="header-bg">
+  <div class="wrap">
+    <div class="h-bg">
+      <div class="total">
+        <div class="header">
+          <div class="header-right">
+            <ul class="follow_icon">
+              <li>
+                <%= image_tag("image/co-nb.png", alt:t(".title image" ))%>
+              </li>
+              <li>
+                <%= image_tag("image/lo-pn.png", alt:t(".title image")) %></a>
+              </li>
+            </ul>
+          </div>
+          <div class="clear"></div>
+          <div class="header-bot">
+            <div class="logo">
+              <%= image_tag("image/logo.png") %>
+            </div>
+            <div class="search">
+              <input type="text" class="textbox" value="" onfocus="this.value === '';" onblur="if (this.value === '') {this.value === '';}">
+              <button class="gray-button"><span><%= t ".search" %></span>
+              </button>
             </div>
             <div class="clear"></div>
-            <div class="header-bot">
-              <div class="logo">
-                <a href="#">
-                  <%= image_tag( "image/logo.png") %>
-                </a>
-              </div>
-              <div class="search">
-                <input type="text" class="textbox" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}">
-                <button class="gray-button"><span>Search</span>
-                </button>
-              </div>
-              <div class="clear"></div>
-            </div>
           </div>
-          <div class="menu">
-            <div class="top-nav">
-              <ul>
-                <li class="#">
-                  <a href="index.html">
-                    <%= t ".home"%>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <%= t".product" %>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <%= t ".sale" %>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <%= t".contact" %>
-                  </a>
-                </li>
-              </ul>
-              <div class="clear"></div>
-            </div>
-          </div>
-          <div class="banner-top">
-            <div class="header-bottom">
-              <div class="header_bottom_right_images">
-                <div class="content-wrapper">
-                  <div class="content-top">
-                    <div class="box_wrapper">
-                      <h1><%= t(".Sản Phẩm Mới nhất")%></h1>
-                    </div>
-                    <div class="text">
-                      <div class="grid_1_of_3 images_1_of_3">
-                        <div class="grid_1">
-                          <a href="single.html">
-                            <%= image_tag( "image/sanpham.jpg") %>
-                          </a>
-                          <div class="grid_desc">
-                            <p class="title"><%= t ".Quả Cầu Tuyết Thủy Tinh" %></p>
-                            <p class="title1">
-                              <%= t ".Quả Cầu Tuyết Thủy Tinh" %> , <%= t ".Chất liệu thủy tinh, đá nhân tạo"  %> , <%= t  ".Kích thước 15x10cm"  %>, <%= t ".Thiết kế có chức năng phát nhạc, trong quả cầu có ánh kim tạo hiệu ứng đẹp mắt" %>
-                            </p>
-                            <div class="price" style="height: 19px;">
-                              <span class="reducedfrom"><%= t ".$20.00" %></span>
-                              <span class="actual"><%= t ".$30.00" %></span>
-                            </div>
-                            <div class="cart-button">
-                              <div class="cart">
-                                <a href="#">
-                                  <%= image_tag( "image/cart.png") %>
-                                </a>
-                              </div>
-                              <button class="button"><span>Details</span>
-                              </button>
-                              <div class="clear"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="clear"></div>
-                      </div>
-                      <div class="grid_1_of_3 images_1_of_3">
-                        <div class="grid_1">
-                          <a href="single.html">
-                            <%= image_tag( "image/demo1.jpg") %>
-                          </a>
-                          <div class="grid_desc">
-                            <p class="title"><%= t ".Quả Cầu Tuyết Thủy Tinh" %></p>
-                            <p class="title1">
-                              <%= t ".Quả Cầu Tuyết Thủy Tinh" %> , <%= t ".Chất liệu thủy tinh, đá nhân tạo" %> , <%= t ".Kích thước 15x10cm" %>, <%= t ".Thiết kế có chức năng phát nhạc, trong quả cầu có ánh kim tạo hiệu ứng đẹp mắt" %>
-                            </p>
-                            <div class="price" style="height: 19px;">
-                              <span class="reducedfrom"><%= t ".$20.00" %></span>
-                              <span class="actual"><%= t ".$30.00" %></span>
-                            </div>
-                            <div class="cart-button">
-                              <div class="cart">
-                                <a href="#">
-                                  <%= image_tag( "image/cart.png") %>
-                                </a>
-                              </div>
-                              <button class="button"><span>Details</span>
-                              </button>
-                              <div class="clear"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="clear"></div>
-                      </div>
-                      <div class="grid_1_of_3 images_1_of_3">
-                        <div class="grid_1">
-                          <a href="single.html">
-                            <%= image_tag( "image/sanpham3.jpg") %>
-                          </a>
-                          <div class="grid_desc">
-                            <p class="title"><%= t ".Quả Cầu Tuyết Thủy Tinh" %></p>
-                            <p class="title1">
-                              <%= t ".Quả Cầu Tuyết Thủy Tinh")%> , <%= t ".Chất liệu thủy tinh, đá nhân tạo" %> , <%= t ".Kích thước 15x10cm" %>, <%= t ".Thiết kế có chức năng phát nhạc, trong quả cầu có ánh kim tạo hiệu ứng đẹp mắt" %>
-                            </p>
-                          </div>
-                            <div class="price" style="height: 19px;">
-                              <span class="reducedfrom"><%= t(".$20.00")%></span>
-                              <span class="actual"><%= t(".$30.00")%></span>
-                            </div>
-                            <div class="cart-button">
-                              <div class="cart">
-                                <a href="#">
-                                  <%= image_tag( "image/cart.png") %>
-                                </a>
-                              </div>
-                              <button class="button"><span>Details</span>
-                              </button>
-                              <div class="clear"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="clear"></div>
-                      </div>
-                      <div class="clear"></div>
-                    </div>
-                  </div>
-                  <div class="content-top">
-                    <div class="box_wrapper">
-                      <h1><%= t(".Quà Cưới")%></h1>
-                    </div>
-                    <div class="text">
-                      <div class="grid_1_of_3 images_1_of_3">
-                        <div class="grid_1">
-                          <a href="single.html">
-                            <%= image_tag( "image/sanpham.jpg") %>
-                          </a>
-                          <div class="grid_desc">
-                            <p class="title"><%= t ".Quả Cầu Tuyết Thủy Tinh" %></p>
-                            <p class="title1">
-                              <%= t ".Quả Cầu Tuyết Thủy Tinh"%> , <%= t ".Chất liệu thủy tinh, đá nhân tạo"%> , <%= t ".Kích thước 15x10cm" %>, <%= t ".Thiết kế có chức năng phát nhạc, trong quả cầu có ánh kim tạo hiệu ứng đẹp mắt"%>
-                            </p>
-                          </div>
-                            <div class="price" style="height: 19px;">
-                              <span class="reducedfrom"><%= t ".$20.00"  %></span>
-                              <span class="actual"><%= t ".$30.00" %></span>
-                            </div>
-                            <div class="cart-button">
-                              <div class="cart">
-                                <a href="#">
-                                  <%= image_tag( "image/cart.png") %>
-                                </a>
-                              </div>
-                              <button class="button"><span>Details</span>
-                              </button>
-                              <div class="clear"></div>
-                            </div>
-                          </div>
-                          </div>
-                        </div>
-                        <div class="clear"></div>
-                    </div>
-                      <div class="grid_1_of_3 images_1_of_3">
-                        <div class="grid_1">
-                          <a href="single.html">
-                             <%= image_tag( "image/sanpham.jpg") %>
-                          </a>
-                          <div class="grid_desc">
-                            <p class="title"><%= t ".Quả Cầu Tuyết Thủy Tinh" %></p>
-                            <p class="title1">
-                              <%= t(".Quả Cầu Tuyết Thủy Tinh")%> , <%= t ".Chất liệu thủy tinh, đá nhân tạo" %> , <%= t ".Kích thước 15x10cm" %>, <%= t ".Thiết kế có chức năng phát nhạc, trong quả cầu có ánh kim tạo hiệu ứng đẹp mắt" %>
-                            </p>
-                            <div class="price" style="height: 19px;">
-                              <span class="reducedfrom"><%= t ".$20.00" %></span>
-                              <span class="actual"><%= t ".$30.00" %></span>
-                            </div>
-                            <div class="cart-button">
-                              <div class="cart">
-                                <a href="#">
-                                  <%= image_tag( "image/cart.png") %>
-                                </a>
-                              </div>
-                              <button class="button"><span>Details</span>
-                              </button>
-                              <div class="clear"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="clear"></div>
-                      </div>
-                      <div class="grid_1_of_3 images_1_of_3">
-                        <div class="grid_1">
-                          <a href="single.html">
-                            <%= image_tag( "image/sanpham3.jpg") %>
-                          </a>
-                          <div class="grid_desc">
-                            <p class="title"><%= t ".Quả Cầu Tuyết Thủy Tinh" %></p>
-                            <p class="title1">
-                              <%= t ".Quả Cầu Tuyết Thủy Tinh" %> , <%= t ".Chất liệu thủy tinh, đá nhân tạo" %> , <%= t ".Kích thước 15x10cm" %>, <%= t ".Thiết kế có chức năng phát nhạc, trong quả cầu có ánh kim tạo hiệu ứng đẹp mắt" %>
-                            </p>
-                          </div>
-                            <div class="price" style="height: 19px;">
-                              <span class="reducedfrom"><%= t ".$20.00" %></span>
-                              <span class="actual"><%= t ".$30.00" %></span>
-                            </div>
-                            <div class="cart-button">
-                              <div class="cart">
-                                <a href="#">
-                                  <%= image_tag( "image/cart.png") %>
-                                </a>
-                              </div>
-                              <button class="button"><span>Details</span>
-                              </button>
-                              <div class="clear"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="clear"></div>
-                      </div>
-                      </div>
-                      <div class="clear"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="clear"></div>
-              <div class="footer-bottom">
-                <div class="copy">
-                  <p>Thực hiện bởi TranDinhTan | Hỗ trọ bởi Trainer FramGia</p>
-                </div>
-              </div>
-            </div>
+        </div>
+        <div class="menu">
+          <div class="top-nav">
+            <ul>
+              <li class="#">
+                <%= link_to t(".home") %>
+              </li>
+              <li>
+                <%= link_to t(".product") %>
+              </li>
+              <li>
+                <%= link_to t(".sale") %>
+              </li>
+              <li>
+                <%= link_to t(".contact") %>
+              </li>
+            </ul>
+            <div class="clear"></div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</body>
+</div>
 
-</html>
