--- a/app/views/static_pages/404.html.erb
+++ b/app/views/static_pages/404.html.erb
@@ -1,74 +1,57 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>
-      <%= t ".404-page"%>
-    </title>
-  </head>
-  <body>
-    <div class="wrap">
-      <div class="h-bg">
-        <div class="header">
-          <div class="header-right">
-            <ul class="follow_icon">
-              <li>
-                <a href="#">
-                  <%= image_tag( "image/co-nb.png", alt: "rss feed") %></a>
-              </li>
-              <li>
-                <a href="#">
-                  <%= image_tag( "image/lo-pn.png", alt: "rss feed") %></a>
-              </li>
-            </ul>
-          </div>
-          <div class="clear"></div>
-          <div class="header-bot">
-            <div class="logo">
-              <a href="#">
-                <%= image_tag( "image/logo.png") %>
-              </a>
-            </div>
-            <div class="search">
-              <input type="text" class="textbox" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}">
-              <button class="gray-button"><span><%= t(".search")%></span>
-              </button>
-            </div>
-            <div class="clear"></div>
-          </div>
+<title><%= t ".404-page"%></title>
+<div class="wrap">
+  <div class="h-bg">
+    <div class="header">
+      <div class="header-right">
+        <ul class="follow_icon">
+          <li>
+            <a href="#">
+              <%= image_tag("image/co-nb.png", alt: "rss feed") %></a>
+          </li>
+          <li>
+            <a href="#">
+              <%= image_tag("image/lo-pn.png", alt: "rss feed") %></a>
+          </li>
+        </ul>
+      </div>
+      <div class="clear"></div>
+      <div class="header-bot">
+        <div class="logo">
+          <a href="#">
+            <%= image_tag("image/logo.png") %>
+          </a>
         </div>
-
-        <div class="menu">
-          <div class="top-nav">
-            <ul>
-              <li class="#">
-                <a href="index.html">
-                  <%= t ".home"%>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <%= t ".product" %>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <%= t".sale" %>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <%= t ".contact" %>
-                </a>
-              </li>
-            </ul>
-            <div class="clear"></div>
-          </div>
+        <div class="search">
+          <input type="text" class="textbox" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}">
+          <button class="gray-button"><span><%= t(".search") %></span>
+          </button>
         </div>
-
-        <div class="page-not-found">
-          <h1><%= t ".404"%></h1>
-        </div>
+        <div class="clear"></div>
       </div>
     </div>
-  </body>
-</html>
+
+    <div class="menu">
+      <div class="top-nav">
+        <ul>
+          <li class="#">
+            <%= link_to t(".home"), "#"       %>
+          </li>
+          <li>
+            <%= link_to t(".product"), "#" %>
+          </li>
+          <li>
+            <%= link_to t(".sale"), "#" %>
+          </li>
+          <li>
+            <%= link_to t(".contact"), "#" %>
+          </li>
+        </ul>
+        <div class="clear"></div>
+      </div>
+    </div>
+
+    <div class="page-not-found">
+      <h1><%= t ".404" %></h1>
+    </div>
+  </div>
+</div>
